fix warnings and resource handling